# mem-rp

./: .gitignore  README.md  app.py  chat.py  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_async_app.py
my_mem/: client.py
my_mem/configs/: base.py
my_mem/embeddings/: base.py  openai.py
my_mem/llms/: base.py  openai.py
my_mem/memory/: main.py  short_memory.py
my_mem/rag/: rag_pipeline.py
my_mem/server/: api.py  ui_streamlit.py
my_mem/utils/: factory.py  telemetry.py  utils.py
my_mem/vector_stores/: base.py  faiss.py
